# PearlOS

./: AGENTS.md  ARCHITECTURE.md  BACKUPS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_EXPLANATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Docker dependencies.md  Dockerfile.pearlos  GEMINI.md  LICENSE  LINUX_SETUP.md  MACOS_SETUP.md  MEMORY_SYSTEM_DESIGN.md  NEXT_STEPS.md  OPEN_SOURCE_ANALYSIS.md  PEARLOS_OPENCLAW_SETUP.md  PLAN.md  PRODUCTIONIZATION_PLAN_2025-12-18.md  PULL_REQUEST_TEMPLATE.md  README.md  README.project.md  README.testing.md  README_SETUP.md  SECURITY.md  SETUP_CHOCO_EDGE_CASES.md  SETUP_FROM_SCRATCH.md  SETUP_INSTRUCTIONS.md  SIMPLE_SETUP.md  SOUNDTRACK_IOS_FIX.md  UNIFIED_PEARL_ARCHITECTURE.md  UNIFIED_PEARL_STATUS.md  VAPI_REMOVAL_MIGRATION_SUMMARY.md  VOICE_OPENCLAW_INTEGRATION.md  VOICE_SETUP.md  WINDOWS_SETUP.md  babel.config.js  cypress.config.js  (+22 more)
apps/pipecat-daily-bot/bot/: README.md  __init__.py  auth.py  bot.py  bot_gateway.py  bot_operator.py  comfyui_client.py  entrypoint.sh  handlers.py  loguru.py  pearlos_bridge.py  pearlos_ui.py  pyproject.toml  runner_main.py  test_photo_magic.py
apps/pipecat-daily-bot/bot/.codacy/: codacy.yaml
apps/pipecat-daily-bot/bot/actions/: __init__.py  functional_prompt_actions.py  html_actions.py  notes_actions.py  personality_actions.py  profile_actions.py  search_actions.py  sharing_actions.py
apps/pipecat-daily-bot/bot/api/: __init__.py  notes_api.py
apps/pipecat-daily-bot/bot/core/: __init__.py  config.py  context.py  prompts.py  transport.py  types.py  utils.py
apps/pipecat-daily-bot/bot/eventbus/: __init__.py  bus.py  events.py
apps/pipecat-daily-bot/bot/filters/: silence.py  tts_text_filter.py
apps/pipecat-daily-bot/bot/flows/: __init__.py  admin.py  admin_handlers.py  core.py  dispatcher.py  factory.py  handlers.py  initialization.py  messages.py  nodes.py  operations.py  pacing.py  registry.py  sanitization.py  state.py  summary_tap.py  types.py  utils.py
apps/pipecat-daily-bot/bot/monitoring/: __init__.py  events.py  logging.py
apps/pipecat-daily-bot/bot/pipeline/: builder.py  builder.py.backup
apps/pipecat-daily-bot/bot/processors/: lull.py  non_blocking_router.py  openclaw_session.py  openclaw_session.py.backup  tool_narration.py
apps/pipecat-daily-bot/bot/providers/: daily.py  elevenlabs.py  kokoro.py  pocket_tts.py
apps/pipecat-daily-bot/bot/room/: __init__.py  state.py
apps/pipecat-daily-bot/bot/services/: app_message_forwarder.py  canvas_cli.py  mesh.py  openclaw_mesh_bridge.py  redis.py  redis_admin.py  user_profile.py
apps/pipecat-daily-bot/bot/session/: __init__.py  config_listener.py  context.py  events.py  handlers.py  identity.py  initialization.py  lifecycle.py  managers.py  orchestrator.py  participant_data.py  participants.py
apps/pipecat-daily-bot/bot/tests/: INTEGRATION_STATUS.md  README.md  TESTING_STRATEGY.md  conftest.py  (+45 more)
scripts/transcribe-videos/: pyproject.toml
scripts/transcribe-videos/tests/: test_transcribe_videos.py
scripts/transcribe-videos/transcribe_videos/: __init__.py  cli.py  config.py  formatters.py  runner.py
(+1675 files in other folders)
